Healthbar visibility fixed

--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ main {
 .avatar {
     width: 15vh;
     border: 2px solid #000721;
-    max-width:100%;
+    max-width:60%;
     opacity: 0.8;
     border-radius: 10px;
     background-color: rgba(0, 7, 33, 0.8);
